display grid aligns the cocktails nicely, but ingredient searchbar still moves when cocktails are being displayed - is there a possibility to fix the searchbars in place ?

--- a/src/pages/searchPage/SearchPage.css
+++ b/src/pages/searchPage/SearchPage.css
@@ -17,15 +17,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: row;
+    flex-direction: column;
     align-content: center;
     margin-top: 50px;
 }
 
 .name-box {
-    padding-right: 30px;
+
 }
 
 .ingredient-box {
-    padding-left: 30px;
+
 }
